[gd_scene load_steps=5 format=3 uid="uid://caevj2k7wjup8"]

[ext_resource type="Script" path="res://UI/die_menu.gd" id="1_2n0ue"]
[ext_resource type="FontFile" uid="uid://ba1vll42jj8e3" path="res://fronts/m6x11.ttf" id="2_0ksw3"]
[ext_resource type="AudioStream" uid="uid://cg07djvv2f71f" path="res://sounds/GameOver.wav" id="3_ulhin"]
[ext_resource type="AudioStream" uid="uid://ket4w1sc3tsb" path="res://sounds/Button.wav" id="4_joa8e"]

[node name="DieMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2n0ue")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00820202, 0.00820202, 0.00820202, 1)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0ksw3")
theme_override_font_sizes/font_size = 50
text = "ТЫ УМЕР"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RespawnBtn" type="Button" parent="GridContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0ksw3")
theme_override_font_sizes/font_size = 25
text = "Перезапустить"

[node name="QuitBtn" type="Button" parent="GridContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0ksw3")
theme_override_font_sizes/font_size = 25
text = "Выйти"

[node name="buttonAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_joa8e")

[node name="deadAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ulhin")

[connection signal="pressed" from="GridContainer/HBoxContainer/RespawnBtn" to="." method="_on_respawn_btn_pressed"]
[connection signal="pressed" from="GridContainer/HBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
